BTWCT-1272: Fixed double scrollbar bug

--- a/waters-aem-frontend/src/styles/global.scss
+++ b/waters-aem-frontend/src/styles/global.scss
@@ -9,6 +9,7 @@ html {
 
 body {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 html.no-scroll,
